// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <div
        class="rcx-box rcx-box--full rcx-field"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <label
            class="rcx-box rcx-box--full rcx-field__label rcx-label"
            for="setting_id"
            title="setting_id"
          >
            Label
          </label>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <div
            class="rcx-css-146twpt"
            id="react-aria-:r0:"
            role="group"
          >
            <label
              aria-live="off"
              class="rcx-box rcx-box--full rcx-label"
              for="react-aria-:r0:-0"
            >
              <span
                aria-live="off"
                class="rcx-box rcx-box--full rcx-label"
                data-testid="slider-output"
                for="react-aria-:r0:-0"
              >
                0
              </span>
            </label>
            <div
              class="rcx-css-1izkbpi"
              style="position: relative;"
            >
              <div
                class="rcx-css-cn88oj"
                style="position: absolute; left: 0%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-:r0:"
                    aria-orientation="horizontal"
                    aria-valuetext="0"
                    id="react-aria-:r0:-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Disabled without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <div
        class="rcx-box rcx-box--full rcx-field"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <label
            class="rcx-box rcx-box--full rcx-field__label rcx-label"
            for="setting_id"
            title="setting_id"
          >
            Label
          </label>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <div
            class="rcx-css-146twpt"
            id="react-aria-:r6:"
            role="group"
          >
            <label
              aria-live="off"
              class="rcx-box rcx-box--full rcx-label"
              for="react-aria-:r6:-0"
            >
              <span
                aria-live="off"
                class="rcx-box rcx-box--full rcx-label"
                data-testid="slider-output"
                for="react-aria-:r6:-0"
              >
                0
              </span>
            </label>
            <div
              class="rcx-css-tn00x0"
              style="position: relative;"
            >
              <div
                class="rcx-css-7xkfa"
                style="position: absolute; left: 0%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-:r6:"
                    aria-orientation="horizontal"
                    aria-valuetext="0"
                    disabled=""
                    id="react-aria-:r6:-0"
                    max="100"
                    min="0"
                    step="1"
                    type="range"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithHint without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <div
        class="rcx-box rcx-box--full rcx-field"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <label
            class="rcx-box rcx-box--full rcx-field__label rcx-label"
            for="setting_id"
            title="setting_id"
          >
            Label
          </label>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <span
            class="rcx-box rcx-box--full rcx-field__hint rcx-css-18q594f"
          >
            This is a hint for the slider
          </span>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <div
            class="rcx-css-146twpt"
            id="react-aria-:rc:"
            role="group"
          >
            <label
              aria-live="off"
              class="rcx-box rcx-box--full rcx-label"
              for="react-aria-:rc:-0"
            >
              <span
                aria-live="off"
                class="rcx-box rcx-box--full rcx-label"
                data-testid="slider-output"
                for="react-aria-:rc:-0"
              >
                50
              </span>
            </label>
            <div
              class="rcx-css-1fa7y2g"
              style="position: relative;"
            >
              <div
                class="rcx-css-cn88oj"
                style="position: absolute; left: 50%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-:rc:"
                    aria-orientation="horizontal"
                    aria-valuetext="50"
                    id="react-aria-:rc:-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithResetButton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <div
        class="rcx-box rcx-box--full rcx-field"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <label
            class="rcx-box rcx-box--full rcx-field__label rcx-label"
            for="setting_id"
            title="setting_id"
          >
            Label
          </label>
          <button
            class="rcx-box rcx-box--full rcx-button--small-square rcx-button--icon-danger rcx-button--square rcx-button--icon rcx-button"
            title="Reset"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-undo rcx-icon rcx-css-4pvxx3"
            >
              ❰
            </i>
          </button>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <div
            class="rcx-css-146twpt"
            id="react-aria-:ri:"
            role="group"
          >
            <label
              aria-live="off"
              class="rcx-box rcx-box--full rcx-label"
              for="react-aria-:ri:-0"
            >
              <span
                aria-live="off"
                class="rcx-box rcx-box--full rcx-label"
                data-testid="slider-output"
                for="react-aria-:ri:-0"
              >
                50
              </span>
            </label>
            <div
              class="rcx-css-1fa7y2g"
              style="position: relative;"
            >
              <div
                class="rcx-css-cn88oj"
                style="position: absolute; left: 50%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-:ri:"
                    aria-orientation="horizontal"
                    aria-valuetext="50"
                    id="react-aria-:ri:-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithValue without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <div
        class="rcx-box rcx-box--full rcx-field"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <label
            class="rcx-box rcx-box--full rcx-field__label rcx-label"
            for="setting_id"
            title="setting_id"
          >
            Label
          </label>
        </span>
        <span
          class="rcx-box rcx-box--full rcx-field__row"
        >
          <div
            class="rcx-css-146twpt"
            id="react-aria-:ro:"
            role="group"
          >
            <label
              aria-live="off"
              class="rcx-box rcx-box--full rcx-label"
              for="react-aria-:ro:-0"
            >
              <span
                aria-live="off"
                class="rcx-box rcx-box--full rcx-label"
                data-testid="slider-output"
                for="react-aria-:ro:-0"
              >
                50
              </span>
            </label>
            <div
              class="rcx-css-1fa7y2g"
              style="position: relative;"
            >
              <div
                class="rcx-css-cn88oj"
                style="position: absolute; left: 50%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-:ro:"
                    aria-orientation="horizontal"
                    aria-valuetext="50"
                    id="react-aria-:ro:-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;
